# ctrlx_nanotec_22

./: CMakeLists.txt  README.md  buildCode_amd64.sh  buildCode_arm64.sh
inc/commDatalayer/comm/datalayer/: address.h  client_json.h  datalayer.h  datalayer_defs.h  datalayer_rt.h  datalayer_system.h  datalayer_trace.h  datalayer_version.h  flatbuffer_json.h  flatbuffers_celix.h  memory_generated.h  memory_map_helper.h  metadata_db_generated.h  metadata_helper.h  notify_info_generated.h  persistence_helper_itf.h  program.h  provider_stat_generated.h  realtime_config_generated.h  server_settings_generated.h  servicetoken_helper.h  sub_properties_generated.h  variant.h
inc/commDatalayer/comm/datalayer/base/: array-of-double_generated.h  array-of-timestamp_generated.h  double_generated.h  timestamp_generated.h
inc/commDatalayer/comm/datalayer/c/: datalayer_error_codes.h
inc/commDatalayer/common/testbuddy/: testresult_generated.h
inc/commDatalayer/flatbuffers/: idl.h  reflection_generated.h
inc/nanotec/: accessor_factory.hpp  bus_hardware_id.hpp  bus_hardware_options.hpp  bus_hw_options_defaults.hpp  device_handle.hpp  device_id.hpp  log_level.hpp  nano_lib_accessor.hpp  nano_lib_hw_strings.hpp  nlc_callback.hpp  nlc_constants.hpp  nlc_errorcode.hpp  nlc_export_import.hpp  object_dictionary.hpp  od_entry.hpp  od_index.hpp  od_library.hpp  od_sub_entry.hpp  od_types.hpp  od_types_helper.hpp  profinet_dcp.hpp  result.hpp  result_base.hpp  result_od.hpp  result_od_entry.hpp  sampler_interface.hpp  sampler_types.hpp
lib/commDatalayer/aarch64-linux-gnu/: comm_datalayer.tgz  libflatbuffers.so.23.1.4  libzmq.so.5.2.4  mddb_compiler
snap/: snapcraft.yaml
src/: ctrlx_datalayer_helper.h  dataLayerHandler.cpp  dataLayerHandler.hpp  main.cpp  main.hpp  nanolib_helper.cpp  nanolib_helper.hpp  nanotecHandler.cpp  nanotecHandler.hpp
